--- a/sehrim.html
+++ b/sehrim.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>anasayfa</title>
-    <link rel="stylesheet" href="C:\Users\Mühendis\Desktop\web Prejesi\anasayfastyle.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="C:\Users\Mühendis\Desktop\web Prejesi\sehrimstyle.css">
 
 </head>
 <body>
@@ -14,7 +14,7 @@
                 <a href="#">NUSEYBE</a>
             </div>
             <ul>
-                <li><a href="#">Ana Sayfa</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\anasayfa.html" target="_blank">Ana Sayfa</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\index.html" target="_blank">Login</a></li>
                 <li><a href="#">Hakkimda</a></li>
                 <li><a href="#">İletişim</a></li>
@@ -28,9 +28,32 @@
             </ul>
         </div>
         <div class="center">
-            <h1>Web Siteme Hoşgeldiniz :)</h1>
-           <center> <h2>NUSEYBE ABDULLAH</h2></center>
+            <h1>İDLİP E HOŞGELDİNİZ:)</h1>
+           
         </div>
     </div>
+</div>
+<div class="center">
+    <center><h2>Suriyede Gezilecek Yerler:)</h2></center>
+   
+</div>
+<div class="slider">
+    <div class="slider_content">
+        <div class="slider_item">
+           <img src="foto/sam.jpeg" alt="">
+        </div>
+        <div class="slider_item">
+           <img src="foto/hama.jpeg" alt="">
+        </div>
+        <div class="slider_item">
+           <img src="foto/tadmur.jpeg" alt="">
+        </div>
+        <div class="slider_item">
+           <img src="foto/halep kalesi.jpeg" alt="">
+        </div>
+
+    </div>
+         
+</div>
 </body>
 </html>
