--- a/anasayfa.html
+++ b/anasayfa.html
@@ -14,7 +14,7 @@
                 <a href="#">NUSEYBE</a>
             </div>
             <ul>
-                <li><a href="#">Ana Sayfa</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\anasayfa.html" target="_blank">Ana Sayfa</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\index.html" target="_blank">Login</a></li>
                 <li><a href="#">Hakkimda</a></li>
                 <li><a href="#">İletişim</a></li>
