--- a/ilgialanlarim.html
+++ b/ilgialanlarim.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="C:\Users\Mühendis\Desktop\web Prejesi\ilgialanlarim.css">
 </head>
 <body>
     <div class="container">
@@ -25,5 +26,24 @@
 
             </ul>
         </div>
+    <div class="sehir1">
+        <H3>SURIYER</H3>
+        <div class="sehir2">
+            <div class="sehir3">
+               <img src="foto/kitap.jpeg" class="foto" title="DAHA FAZLA BILGI">
+            </div>
+            <div class="sehir3">
+                <img src="foto/keman.jpeg" class="foto" title="DAHA FAZLA BILGI">
+            </div>
+            <div class="sehir3">
+                <img src="foto/hukuk.jpeg" class="foto"title="DAHA FAZLA BILGI">
+            </div>
+            <div class="sehir3">
+                <img src="foto/seyahat.jpeg"class="foto" title="DAHA FAZLA BILGI">
+            </div>
+            
+        </div>
+    
+    </div>
 </body>
 </html>
