--- a/sehrim.html
+++ b/sehrim.html
@@ -1,59 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="C:\Users\Mühendis\Desktop\web Prejesi\sehrimstyle.css">
+    <!-- <link rel="stylesheet" href="C:\Users\Mühendis\Desktop\web Prejesi\ozellik.css"> -->
 
 </head>
+
 <body>
     <div class="container">
         <div class="navbar">
             <div class="logo">
                 <a href="#">NUSEYBE</a>
             </div>
+
+
             <ul>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\anasayfa.html" target="_blank">Ana Sayfa</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\index.html" target="_blank">Login</a></li>
-                <li><a href="#">Hakkimda</a></li>
-                <li><a href="#">İletişim</a></li>
-                <li><a href="#">CV</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\hakkinda.html">Hakkimda</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\iletisim.html">İletişim</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\cv.html">CV</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\sehrim.html" target="_blank">Şehrim</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\mirasimiz.html" target="_blank">Mirasımız</a></li>
-                <li><a href="#">İlgi Alanlarım</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\ilgialanlarim.html">İlgi Alanlarım</a></li>
 
 
 
             </ul>
         </div>
-        <div class="center">
-            <h1>İDLİP E HOŞGELDİNİZ:)</h1>
-           
-        </div>
+
+
+
+
+
     </div>
-</div>
-<div class="center">
+    <div class="center">
+        <h1>İDLİP E HOŞGELDİNİZ:)</h1>
+
+    </div>
+    </div>
+    </div>
+    <!-- <div class="center">
     <center><h2>Suriyede Gezilecek Yerler:)</h2></center>
    
-</div>
-<div class="slider">
-    <div class="slider_content">
-        <div class="slider_item">
-           <img src="foto/sam.jpeg" alt="">
+</div> -->
+
+
+
+
+    <div class="ilkdiv">
+        <h1>SURİYE TANITMA</h1>
+        <!-- <div class="sehir"> -->
+        <div class="sehir1">
+            <H3>SURIYER</H3>
+            <div class="sehir2">
+                <div class="sehir3">
+                    <a
+                        href="https://ar.m.wikipedia.org/wiki/%D9%86%D9%88%D8%A7%D8%B9%D9%8A%D8%B1_%D8%AD%D9%85%D8%A7%D8%A9"><img
+                            src="foto/hama2.jpeg" class="foto" title="DAHA FAZLA BILGI"></a>
+                </div>
+                <div class="sehir3">
+                    <a href="https://ar.m.wikipedia.org/wiki/%D9%85%D8%AA%D8%AD%D9%81_%D8%A5%D8%AF%D9%84%D8%A8"><img
+                            src="foto/idlip muzesi .jpeg" class="foto" title="DAHA FAZLA BILGI"></a>
+                </div>
+                <div class="sehir3">
+                    <a href="https://en.wikipedia.org/wiki/Umayyad_Mosque"><img src="foto/mescid.jpeg" class="foto"
+                            title="DAHA FAZLA BILGI"></a>
+                </div>
+                <div class="sehir3">
+                    <a href="https://tr.wikipedia.org/wiki/Halep_Kalesi"><img src="foto/halep kalesi.jpeg" class="foto"
+                            title="DAHA FAZLA BILGI"></a>
+                </div>
+
+            </div>
+
         </div>
-        <div class="slider_item">
-           <img src="foto/hama.jpeg" alt="">
+        <!-- <p>Suriye'nin başşehri veya "Dımaşk" şehrinin merkez olarak kabul edildiği Suriye bölgesine verilen ad. Bu
+                bölgenin merkezi olan Dımaşk
+                şehrine "Şam" da denilmektedir. Şehir merkezi Suriye'nin güneybatı kesiminde yer almaktadır. Akdeniz'e
+                uzaklığı 96 km, denizden
+                yüksekliği ise 685 metredir. Şam şehrinin kuzeyinde Kâsiyun Dağı, batısında Cebelü'ş-Şarkî ve Lübnan
+                Dağları vardır
+                . Doğu ve güney tarafları ise çevredeki ovalara açılmaktadır. El-Gûte Vahâsının ortasında yer alan
+                şehre, ortasından geçen
+                Barada Irmağı hayat vermektedir. Irmağın vahasında çeşitli meyveler, sebze, zeytin ve tahıl
+                yetiştirilmektedir.
+                Son yıllardaki şehirleşme şehrin tabiî ve yeşil görünümünü bozmakta, her geçen gün meyve ve sebze
+                bahçelerinin
+                azalmasına sebep olmaktadır. Mükemmel bir karayolu ağı ve iki demiryolu hattıyla Beyrut, Halep, Amman ve
+                Bağdat'a
+                bağlanan Şam şehri milletlerarası hava limanı sâyesinde daha da önem kazanmaktadır. Şehre bâzı yeni
+                sanâyi tesisleri kurulmuş
+                olup, zeytinyağı, çimento ve cam fabrikaları, dokuma ve ayakkabı îmâlâthâneleri vardır. Kılıç yapımı ve
+                kesici silahlar
+                îmâlâtı ortadan kalktıysa da halı, pamuklu ve ipekli kumaş, koku, bakır ve tahta eşyâ îmâlâtı devam
+                etmektedir.</p> -->
+        <!-- </div> -->
+        <div class="sehir">
+            <div class="sehir1">
+                <H3>ÇANAKKALE</H3>
+                <div class="sehir2">
+                    <div class="sehir3">
+                        <a href="https://tr.wikipedia.org/wiki/%C3%87anakkale_(il)"><img src="c1.jpg" class="foto"
+                                title="DAHA FAZLA BILGI"></a>
+                    </div>
+                    <div class="sehir3">
+                        <a href="https://tr.wikipedia.org/wiki/%C3%87anakkale_(il)"><img src="c2.jpg" class="foto"
+                                title="DAHA FAZLA BILGI"></a>
+                    </div>
+                    <div class="sehir3">
+                        <a href="https://tr.wikipedia.org/wiki/%C3%87anakkale_(il)"><img src="c3.jpg" class="foto"
+                                title="DAHA FAZLA BILGI"></a>
+                    </div>
+                    <div class="sehir3">
+                        <a href="https://tr.wikipedia.org/wiki/%C3%87anakkale_(il)"><img src="c4.jpg" class="foto"
+                                title="DAHA FAZLA BILGI"></a>
+                    </div>
+                </div>
+
+            </div>
+            <!-- <p>
+            </p> -->
+
         </div>
-        <div class="slider_item">
-           <img src="foto/tadmur.jpeg" alt="">
-        </div>
-        <div class="slider_item">
-           <img src="foto/halep kalesi.jpeg" alt="">
+        <div class="sehir">
+            <div class="sehir1">
+                <H3>SAKARYA</H3>
+                <div class="sehir2">
+
+                    <div class="sehir3">
+                        <a href="https://tr.wikipedia.org/wiki/Sakarya"><img src="sa.jpg" class="foto"
+                                title="DAHA FAZLA BILGI"></a>
+                    </div>
+                    <div class="sehir3">
+                        <a href="https://tr.wikipedia.org/wiki/Sakarya"><img src="sa2.jpg" class="foto"
+                                title="DAHA FAZLA BILGI"></a>
+                    </div>
+                    <div class="sehir3">
+                        <a href="https://tr.wikipedia.org/wiki/Sakarya"><img src="sa3.jpg" class="foto"
+                                title="DAHA FAZLA BILGI"></a>
+                    </div>
+                    <div class="sehir3">
+                        <a href="https://tr.wikipedia.org/wiki/Sakarya"><img src="sa4.jpg" class="foto"
+                                title="DAHA FAZLA BILGI"></a>
+                    </div>
+                </div>
+
+
+            </div>
+            <p>
+                <!-- aciklama -->
+            </p>
+
+
         </div>
 
     </div>
-         
+
+
+</body>
+
+</html>
+
 </div>
 </body>
+
 </html>
