--- a/anasayfa.html
+++ b/anasayfa.html
@@ -14,14 +14,14 @@
                 <a href="#">NUSEYBE</a>
             </div>
             <ul>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\anasayfa.html" target="_blank">Ana Sayfa</a></li>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\index.html" target="_blank">Login</a></li>
-                <li><a href="#">Hakkimda</a></li>
-                <li><a href="#">İletişim</a></li>
-                <li><a href="#">CV</a></li>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\sehrim.html" target="_blank">Şehrim</a></li>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\mirasimiz.html" target="_blank">Mirasımız</a></li>
-                <li><a href="#">İlgi Alanlarım</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\anasayfa.html">Ana Sayfa</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\index.html">Login</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\hakkinda.html">Hakkimda</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\iletisim.html">İletişim</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\cv.html">CV</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\sehrim.html">Şehrim</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\mirasimiz.html">Mirasımız</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\ilgialanlarim.html">İlgi Alanlarım</a></li>
 
 
 
