--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="C:\Users\Mühendis\Desktop\web Prejesi/style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="navbar">
+            <div class="logo">
+                <a href="#">NUSEYBE</a>
+            </div>
+            <ul>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\anasayfa.html">Ana Sayfa</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\index.html">Login</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\hakkinda.html">Hakkimda</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\iletisim.html">İletişim</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\cv.html">CV</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\sehrim.html">Şehrim</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\mirasimiz.html">Mirasımız</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\ilgialanlarim.html">İlgi Alanlarım</a></li>
+
+
+
+            </ul>
+        </div>
     <div class="wrapper">
         <form action="">
             <h1>Login</h1>
