--- a/mirasimiz.html
+++ b/mirasimiz.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="C:\Users\Mühendis\Desktop\web Prejesi\mirasimiz.css">
 </head>
 <body>
     <div class="container">
@@ -12,13 +13,13 @@
                 <a href="#">NUSEYBE</a>
             </div>
             <ul>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\anasayfa.html" target="_blank">Ana Sayfa</a></li>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\index.html" target="_blank">Login</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\anasayfa.html" >Ana Sayfa</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\index.html" >Login</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\hakkinda.html">Hakkimda</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\iletisim.html">İletişim</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\cv.html">CV</a></li>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\sehrim.html" target="_blank">Şehrim</a></li>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\mirasimiz.html" target="_blank">Mirasımız</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\sehrim.html" >Şehrim</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\mirasimiz.html" >Mirasımız</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\ilgialanlarim.html">İlgi Alanlarım</a></li>
 
 
