--- a/cv.html
+++ b/cv.html
@@ -1,30 +1,131 @@
 <!DOCTYPE html>
-<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="C:\Users\Mühendis\Desktop\web Prejesi\cv.css">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" lang="en" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+    integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="C:\Users\Mühendis\Desktop\web Prejesi\cv.css" />
+  <link rel="stylesheet" type="text/css" href="./Styles/footer.css" />
+  <link rel="stylesheet" href="./Styles/navbar.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <title>Benim özgeçmişim</title>
 </head>
+
 <body>
-    <div class="container">
-        <div class="navbar">
-            <div class="logo">
-                <a href="#">NUSEYBE</a>
-            </div>
-            <ul>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\anasayfa.html" >Ana Sayfa</a></li>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\index.html" >Login</a></li>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\hakkinda.html">Hakkimda</a></li>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\iletisim.html">İletişim</a></li>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\cv.html">CV</a></li>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\sehrim.html" >Şehrim</a></li>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\mirasimiz.html" >Mirasımız</a></li>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\ilgialanlarim.html">İlgi Alanlarım</a></li>
+  <!-- NAVIGATOR BAR START -->
+  <header>
+    <div class="navbar">
+      <div class="logo">
+        <a href="#">NUSEYBE</a>
+      </div>
+
+
+      <ul>
+        <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\anasayfa.html">Ana Sayfa</a></li>
+        <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\index.html">Login</a></li>
+        <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\hakkinda.html">Hakkimda</a></li>
+        <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\iletisim.html">İletişim</a></li>
+        <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\cv.html">CV</a></li>
+        <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\sehrim.html">Şehrim</a></li>
+        <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\mirasimiz.html">Mirasımız</a></li>
+        <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\ilgialanlarim.html">İlgi Alanlarım</a></li>
 
 
 
-            </ul>
+      </ul>
+    </div>
+
+  </header>
+  <!-- NAVIGATOR BAR ENDS -->
+
+
+  <!-- skills section start -->
+  <section class="skills">
+    <div class="maximum-width">
+      <h2 class="title">ÖZETLEME</h2>
+      <div class="skills-content">
+        <div class="column left">
+          <div class="text">Yaratıcı becerilerim ve deneyimlerim.</div>
+          <p>
+            Merhaba ben nuseybe ilk olarak çok hırslı bir insanım kolay kolay pes etmem.
+          </p>
+          <p> 🏤 Mezuz olduğum lise H.sebiha Özlek erken mezun olup üniversiteye 17 yaşında girdim</p>
+          <p> şimdi birinci sınıfı bitirmek üzereyüm 2 dil konuşabilirim</p>
+          <p>🎓 Bilgisayar Mühendisliği Lisans Derecelesi =Sakarya Üniversitesi/Türkiye </p>
+          <p>öz güvenlik, Sakinlik ve İnanç beni tanımlayan üç kelime olacaktır.</p>
         </div>
+        <div class="column right">
+          <div class="bars">
+            <div class="info">
+              <span>HTML</span>
+              <span>90%</span>
+            </div>
+            <div class="line html"></div>
+          </div>
+          <div class="bars">
+            <div class="info">
+              <span>CSS</span>
+              <span>70%</span>
+            </div>
+            <div class="line css"></div>
+          </div>
+          <div class="bars">
+            <div class="info">
+              <span>Java Script</span>
+              <span>60%</span>
+            </div>
+            <div class="line js"></div>
+          </div>
+          <div class="bars">
+            <div class="info">
+              <span>C++</span>
+              <span>70%</span>
+            </div>
+            <div class="line cplus"></div>
+          </div>
+          <div class="bars">
+            <div class="info">
+              <span>C#</span>
+              <span>70%</span>
+            </div>
+            <div class="line cs"></div>
+          </div>
+          <div class="bars">
+            <div class="info">
+              <span>jAVA</span>
+              <span>80%</span>
+            </div>
+            <div class="line cs"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER SECTION STARTS -->
+  <footer>
+    <div class="basinhakki">
+        <center>
+
+            <div class="dizayn">
+                <span> Nuseybe Elabdullah </span>
+                <a href="C:\Users\Mühendis\Desktop\web Prejesi\iletisim.html"> Tarafından dizayn edilmiştir
+                </a>
+                <span>|</span>
+                <i class="fa-regular fa-copyright"></i>
+                <span>2024 Tüm hakları saklıdır</span>
+            </div>
+        </center>
+    </div>
+</footer>
+  <!-- FOOTER SECTION ENDS -->
+
+
 </body>
+
 </html>
