--- a/mirasimiz.html
+++ b/mirasimiz.html
@@ -42,11 +42,157 @@
         </div>
     </header>
     <div class="bgrd">
+        <h1 id="miras">Miras</h1>
         <div class="container">
+            <br><br><br><br>
+            <div class="suriyemiras">
+                <div class="ilkdiv">
+                    <div class="yazi">
+                        <h1>Suriye Mirası</h1>
+                        <hr>
+                    </div>
+                    <div class="icerik">
 
+                        <ul>
+                            <li>Tadmur</li>
+                            <li>Bosra Roma Tiyatrosu</li>
+                            <li>Eski Dimaşk Evleri</li>
+                            <li>Zenobia</li>
+                            <li>Porto Tartous Spa & Resort</li>
+                        </ul>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="tadmur">
+                <div class="baslik">
+                    <p id="baslik1">Ortadoğu’nun "açık hava müzesi"</p>
+                       <p id="baslik"> olarak nitelendirilen Suriyenin mirasını tanıtma</p>
+                    <hr>
+                </div>
+                <span id="tadmur">Tadmur Eserleri| </span><span id="palmira"> |Palmira Eserleri</span>
+                <br><br><br>
+                <div class="tadmurdiv">
+                    <p>Tadmur(Palmira), 1. yüzyılın ortalarında kervanların geçiş güzergâhı üzerinde,</p>
+                    <p> Pers İmparatorluğu ve Akdeniz kıyısındaki Romalıların ve Fenikelilerin</p>
+                    <p> limanları arasında Roma İmparatorluğu kontrolünde bir şehir konumunda</p>
+                    <p> Suriye çölünün ticari kervanlarının geçiş noktasındaolmasıbulunmaktayd</p>
+                    <p> de denilen şehrin isminin bulunan ilk bilgileresebebiyle "Çölün Gelini"</p>
+                    <p> olduğu Mari'de bulunan Babil tabletlerindekigöre Tedmur, Tedmür, </p>
+                    <p>Tadmur veya Tudmurkayıtlardan anlaşılmıştır.</p>
+                    <div class="tadmurfoto">
+                        <a href="https://tr.wikipedia.org/wiki/Palmira" target="_blank"><img src="foto/tadmurr.jpeg" alt=""></a>
+                    </div>
+                </div>
+            </div>
+            <br><br>
+            <div class="tadmur">
+                <!-- <div class="baslik">
+                    <p id="baslik">Ortadoğu’nun "açık hava müzesi"
+                        olarak nitelendirilen Suriyenin mirasını tanıtma</p>
+                    <hr>
+                </div> -->
+                <span id="tadmur">Bosra Roma Tiyatrosu| </span><span id="palmira"> |Bosra Kolezyomu</span>
+                <br><br><br>
+                <div class="tadmurdiv">
+                    <p>Tiyatro , Bosra'nın yeni Roma eyaleti Arabia Petraea'nın başkenti olmasından sonra</p>
+                    <p> 2. yüzyılın başlarında inşa edilmiştir . Tiyatro, içinde uygun bir yer </p>
+                    <p> olmadığı için surların dışına inşa edilmiş; ancak sütunlu bir cadde ile </p>
+                    <p> şehrin yol ağına entegre edilmiştir . Orta Çağ'da , tiyatronun etrafına, </p>
+                    <p> tiyatronun mükemmel korunma durumunu bir Müslüman kalesi inşa edildi;</p>
+                    <p>ancak tiyatronun yanındaki diğer yapılarla birlikte sütunlu cadde </p>
+                    <p>kale yapılırken yıkılmıştır.</p>
+                    <div class="tadmurfoto">
+                        <a href="https://tr.wiki34.com/wiki/Teatro_romano_de_Bosra" target="_blank"><img src="foto/basra.jpeg"
+                                alt=""></a>
+                    </div>
+                </div>
+            </div><br>
+            <div class="tadmur">
+                <!-- <div class="baslik">
+                    <p id="baslik">Ortadoğu’nun "açık hava müzesi"
+                        olarak nitelendirilen Suriyenin mirasını tanıtma</p>
+                    <hr>
+                </div> -->
+                <span id="tadmur">Dimaşk_el Kadima| </span><span id="palmira"> |Eski Dimaşk Evleri</span>
+                <br><br><br>
+                <div class="tadmurdiv">
+                    <p>Eski Şam evi dışarıdan kapalıdır.İçerisi açıkta, eski şehrin dar</p>
+                    <p>, dolambaçlı sokakları ve gölgeli sokakları arasında gideceğinizi sanıyorsunuz. </p>
+                    <p> İçeride kendinizi ortasından su akan, geniş odaları, uzun ağaçları ve çardaklarıyla </p>
+                    <p>çevrili geniş bir avlunun önünde buluyorsunuz. Evi ferahlığı, koordinasyonu ve her  </p>
+                    <p>ihtiyaca uygun içeriğiyle görüyorsunuz. sağlık ve rahatlık.Zemin kanallarında, 
+                        su havuzlarında, salonlarda ve oturma teraslarında kullanılan çeşitli şekillerde ve çok </p>
+                    <p>renkli mermerlerden, tavan ve duvarları kaplamak için kullanılan en güzel renklere </p>
+                    <p>boyanmış ahşaplardan oluşan harika dekorasyon ve süslemelerin bolluğu şekilleri ve detaylar
+                         otantik Arap sanatının ruhundan ilham alan her türlü yazı, çizim ve güzel dekoratif çizgiler
+                    </p>
+                    <div class="tadmurfoto">
+                        <a href="https://tr.wiki34.com/wiki/Teatro_romano_de_Bosra" target="_blank"><img src="foto/dimask1.jpeg"
+                                alt=""></a>
+                    </div>
+                </div>
+            </div><br>
+            <div class="tadmur">
+                <!-- <div class="baslik">
+                    <p id="baslik">Ortadoğu’nun "açık hava müzesi"
+                        olarak nitelendirilen Suriyenin mirasını tanıtma</p>
+                    <hr>
+                </div> -->
+                <span id="tadmur">Zenobia| </span><span id="palmira"> |Palmira imparatorluğun kraliçesi</span>
+                <br><br><br>
+                <div class="tadmurdiv">
+                    <p>Zenobia, üçüncü yüzyılda Mısır'ı fetheden bir Suriyeli savaşçı kraliçe idi.</p>
+                    <p>Nihayet yakalandıktan ve Roma'ya götürüldükten sonra, Zenobia Roma toplumunda </p>
+                    <p>önemli bir figür haline geldi ve bugün Roma tarihinde  Seo hizmeti bir figür.  </p>
+                    <p>Yüzü, üçüncü yüzyıldan kalma bazı Roma sikkelerinde görülebilir ve aynı zamanda Roma </p>
+                    <p>eserlerini toplayan çeşitli müzelerde sergilenen çeşitli heykellerde de görülür.</p>                    </p>
+                    <div class="tadmurfoto">
+                        <a href="https://tr.wikipedia.org/wiki/Zenobia" target="_blank"><img src="foto/zınopya.jpeg"
+                                alt=""></a>
+                    </div>
+                </div>
+            </div><br>
+            <div class="tadmur">
+                <!-- <div class="baslik">
+                    <p id="baslik">Ortadoğu’nun "açık hava müzesi"
+                        olarak nitelendirilen Suriyenin mirasını tanıtma</p>
+                    <hr>
+                </div> -->
+                <span id="tadmur">Porto Tartous Spa  </span><span id="palmira">& Resort</span>
+                <br><br><br>
+                <div class="tadmurdiv">
+                    <p>Zenobia, üçüncü yüzyılda Mısır'ı fetheden bir Suriyeli savaşçı kraliçe idi.</p>
+                    <p>Nihayet yakalandıktan ve Roma'ya götürüldükten sonra, Zenobia Roma toplumunda </p>
+                    <p>önemli bir figür haline geldi ve bugün Roma tarihinde  Seo hizmeti bir figür.  </p>
+                    <p>Yüzü, üçüncü yüzyıldan kalma bazı Roma sikkelerinde görülebilir ve aynı zamanda Roma </p>
+                    <p>eserlerini toplayan çeşitli müzelerde sergilenen çeşitli heykellerde de görülür.</p>                    </p>
+                    <div class="tadmurfoto">
+                        <a href="https://tr.wikipedia.org/wiki/Zenobia" target="_blank"><img src="foto/tartus.jpeg"
+                                alt=""></a>
+                    </div>
+                </div>
+            </div><br><br>
+            <footer>
+                <div class="basinhakki">
+                    <center>
+
+                        <div class="dizayn">
+                            <span> Nuseybe Elabdullah </span>
+                            <a href="C:\Users\Mühendis\Desktop\web Prejesi\iletisim.html"> Tarafından dizayn edilmiştir
+                            </a>
+                            <span>|</span>
+                            <i class="fa-regular fa-copyright"></i>
+                            <span>2024 Tüm hakları saklıdır</span>
+                        </div>
+                    </center>
+                </div>
+            </footer>
 
         </div>
+
     </div>
+
 </body>
 
 </html>
