--- a/sehrim.html
+++ b/sehrim.html
@@ -60,9 +60,11 @@
                             src="foto/bayrak.jpeg" alt="Daha Fazla"></a>
                 </div>
                 <div class="yazi">
-                    <p> Bayraktaki yeşil renk Raşidun Halifeliğinin temsili,Beyaz Emevi devletini, Siyah renk ise Abbasi devletini simgeliyor.Üç kırmızı yıldızbaşlangıçtaSuriye'duğrunaşehit kanı ve Suriye'deki üç bölgeyi temsil ediyordu: Halep, Şam ve Deyrizor</p>
-                        <p></p>
-                         <p></p>
+                    <p> Bayraktaki yeşil renk Raşidun Halifeliğinin temsili,Beyaz Emevi devletini, Siyah renk ise Abbasi
+                        devletini simgeliyor.Üç kırmızı yıldızbaşlangıçtaSuriye'duğrunaşehit kanı ve Suriye'deki üç
+                        bölgeyi temsil ediyordu: Halep, Şam ve Deyrizor</p>
+                    <p></p>
+                    <p></p>
                 </div>
             </div>
             <!-- burdan -->
@@ -259,6 +261,7 @@
                     <img src="foto/jubn.jpeg">
                 </div>
             </div>
+
             <footer>
                 <div class="basinhakki">
                     <center>
@@ -274,8 +277,9 @@
                     </center>
                 </div>
             </footer>
-        </div>
 
+        </div>
+    </div>
 </body>
 
 </html>
