--- a/cv.html
+++ b/cv.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="./Styles/navbar.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-  <title>Benim özgeçmişim</title>
+  <title>CV</title>
 </head>
 
 <body>
@@ -28,7 +28,6 @@
       <ul>
         <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\anasayfa.html">Ana Sayfa</a></li>
         <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\index.html">Login</a></li>
-        <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\hakkinda.html">Hakkimda</a></li>
         <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\iletisim.html">İletişim</a></li>
         <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\cv.html">CV</a></li>
         <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\sehrim.html">Şehrim</a></li>
