--- a/ilgialanlarim.html
+++ b/ilgialanlarim.html
@@ -4,20 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>İLGİ ALANLARIM</title>
     <link rel="stylesheet" href="C:\Users\Mühendis\Desktop\web Prejesi\ilgialanlarim.css">
+    <style>
+        body {
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            min-height: 500px;
+            height: 100vh;
+
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container">
+    <header>
         <div class="navbar">
             <div class="logo">
                 <a href="#">NUSEYBE</a>
             </div>
+
+
             <ul>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\anasayfa.html">Ana Sayfa</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\index.html">Login</a></li>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\hakkinda.html">Hakkimda</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\iletisim.html">İletişim</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\cv.html">CV</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\sehrim.html">Şehrim</a></li>
@@ -28,7 +39,9 @@
 
             </ul>
         </div>
-       
+
+    </header>
+    <div class="container">
     </div>
     <div class="sehir1">
         <H3>İLGİ ALANLARIM</H3>
@@ -63,6 +76,23 @@
         <img src="foto/5second (1).jpeg" alt=""id="5second">
         <img src="foto/mafia.jpeg" alt=""id="mafia">
     </div>
+    <br><br><br>
+    <footer>
+        <div class="basinhakki">
+            <center>
+
+                <div class="dizayn">
+                    <span> Nuseybe Elabdullah </span>
+                    <a href="C:\Users\Mühendis\Desktop\web Prejesi\iletisim.html"> Tarafından dizayn edilmiştir
+                    </a>
+                    <span>|</span>
+                    <i class="fa-regular fa-copyright"></i>
+                    <span>2024 Tüm hakları saklıdır</span>
+                </div>
+            </center>
+        </div>
+    </footer>
+
     
 </body>
 </html>
