--- a/mirasimiz.html
+++ b/mirasimiz.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MİRAS</title>
     <link rel="stylesheet" href="C:\Users\Mühendis\Desktop\web Prejesi\mirasimiz.css">
     <style>
         body {
@@ -28,7 +28,6 @@
             <ul>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\anasayfa.html">Ana Sayfa</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\index.html">Login</a></li>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\hakkinda.html">Hakkimda</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\iletisim.html">İletişim</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\cv.html">CV</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\sehrim.html">Şehrim</a></li>
