--- a/anasayfa.html
+++ b/anasayfa.html
@@ -27,7 +27,7 @@
             </div>
             <ul>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\anasayfa.html">Ana Sayfa</a></li>
-                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\index.html">Login</a></li>
+                <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\login.php">Login</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\iletisim.html">İletişim</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\cv.html">CV</a></li>
                 <li><a href="C:\Users\Mühendis\Desktop\web Prejesi\sehrim.html">Şehrim</a></li>
