--- a/deneme.html
+++ b/deneme.html
@@ -1,58 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" 
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" 
-integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="C:\Users\Mühendis\Desktop\web Prejesi\deneme.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="C:\Users\Mühendis\Desktop\web Prejesi\deneme.css">
+  <title>Document</title>
 </head>
+<!-- 
+  vincenzo
+  alnadam
+  blind
+  mouse
+  bigmouse
+  harry potter
+  welcome to waikiki
+  taxi drever
+  sahib alzuyul
+
+ -->
 <body>
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="foto/seyahat.jpeg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="foto/kitap.jpeg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="foto/hukuk.jpeg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </button>
+  <div class="api">
+  <main id="main">
+    <div class="movie">
+      <img src="foto/vincenzo.jpeg" alt="">
+      <div class="movie_info">
+        <h3>Vincenzo</h3>
+        <span class="green">8.4</span>
       </div>
-      <div class="h">
-        <h1>fvbdbdhth</h1>
+      <div class="overview">
+        Metinleri kameranızla çevirin
+        Because of the war between mafia groups, he traveled to South Korea. In Korea,
+        he deals with lawyer Hong Cha-young. She is the type of lawyer who will do anything
+        to win the case. Vincenzo Cassano falls in love with her, and he also achieves social justice in his own way
       </div>
+    </div>
+    <div class="movie">
+      <img src="foto/blind.jpeg" alt="">
+      <div class="movie_info">
+        <h3>Vincenzo</h3>
+        <span class="green">8.4</span>
+      </div>
+      <div class="overview">
+        Metinleri kameranızla çevirin
+        Because of the war between mafia groups, he traveled to South Korea. In Korea,
+        he deals with lawyer Hong Cha-young. She is the type of lawyer who will do anything
+        to win the case. Vincenzo Cassano falls in love with her, and he also achieves social justice in his own way
+      </div>
+    </div>
+    <div class="movie">
+      <img src="foto/deviljudge.jpeg" alt="">
+      <div class="movie_info">
+        <h3>Vincenzo</h3>
+        <span class="green">8.4</span>
+      </div>
+      <div class="overview">
+        Metinleri kameranızla çevirin
+        Because of the war between mafia groups, he traveled to South Korea. In Korea,
+        he deals with lawyer Hong Cha-young. She is the type of lawyer who will do anything
+        to win the case. Vincenzo Cassano falls in love with her, and he also achieves social justice in his own way
+      </div>
+    </div>
+    <div class="movie">
+      <img src="foto/zyul.jpeg" alt="">
+      <div class="movie_info">
+        <h3>Vincenzo</h3>
+        <span class="green">8.4</span>
+      </div>
+      <div class="overview">
+        Metinleri kameranızla çevirin
+        Because of the war between mafia groups, he traveled to South Korea. In Korea,
+        he deals with lawyer Hong Cha-young. She is the type of lawyer who will do anything
+        to win the case. Vincenzo Cassano falls in love with her, and he also achieves social justice in his own way
+      </div>
+    </div>
+
+  </main>
+</div>
+<script src="C:\Users\Mühendis\Desktop\web Prejesi\js\ilgialanlarim.js"></script>
 </body>
+
 </html>
